manifests/constraints/templates/allowed-repos.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
      validation:
        openAPIV3Schema:
          type: object
          properties:
            repos:
              type: array
              description: "List of allowed container registries"
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          satisfied := [good | repo := input.parameters.repos[_] ; good := startswith(container.image, repo)]
          not any(satisfied)
          msg := sprintf("Container image '%v' comes from untrusted registry. Allowed registries: %v", [container.image, input.parameters.repos])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          satisfied := [good | repo := input.parameters.repos[_] ; good := startswith(container.image, repo)]
          not any(satisfied)
          msg := sprintf("Init container image '%v' comes from untrusted registry. Allowed registries: %v", [container.image, input.parameters.repos])
        }
